[package]
name = "agentsec-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentsec"
path = "src/main.rs"

[dependencies]
agentsec-core = { workspace = true }
agentsec-config = { workspace = true }
agentsec-runner = { workspace = true }
agentsec-scanners = { workspace = true }
agentsec-report = { workspace = true }
agentsec-integrations = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
owo-colors = { workspace = true }
url = "2.5"
