[package]
name = "agentsec-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentsec-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
