[package]
name = "agentsec-integrations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentsec-core = { workspace = true }
agentsec-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
