[package]
name = "agentsec-report"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentsec-core = { workspace = true }
agentsec-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
quick-xml = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
