[package]
name = "agentsec-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentsec-core = { workspace = true }
agentsec-config = { workspace = true }
agentsec-scanners = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
